minor updates and comments

--- a/public_html/mystyle.css
+++ b/public_html/mystyle.css
@@ -1,5 +1,5 @@
 /* 
-    Document   : mobile
+    Document   : mystyle
     Created on : Apr 8, 2014, 6:59:12 PM
     Author     : Dr. Storm
     Description:
