--- a/public_html/mystyle.css
+++ b/public_html/mystyle.css
@@ -75,6 +75,9 @@ body{
 .resume{
     cursor:pointer;
 }
+.calendar{
+    cursor:pointer;
+}
 li{
     text-align: left;
 }
@@ -88,6 +91,9 @@ li{
     
 }
 #GM{
+    
+}
+#calendar{
     
 }
 #resume{
