--- a/templates/about.html
+++ b/templates/about.html
@@ -1,7 +1,7 @@
 <div><!--A short bio about me and my goals-->
     <p>
         My name is Taber Storm Fitzgerald and I am a programmer currently in school working towards a B.S. degree in Computer Science.
-        I work part time as a Front End Software Developer Intern at <a href="http//www.build.com">build.com</a>.
+        I work part time as a Front End Software Developer Intern at <a href="http://www.build.com">build.com</a>.
         I am currently expanding my skill set by making a web-site, and have many goals for the future of this web-site.
         Eventually I would like this site to be able to share experiences and comment about thing I have done.
     </p>
