--- a/templates/crypTrd.html
+++ b/templates/crypTrd.html
@@ -23,67 +23,67 @@ and open the template in the editor.
 
     <br>
 
-    <div class="col-sm-4">
+    <div class="col-sm-1 col-md-4">
         <p>This is the view showing only the balances that one has set to preferred.</p>
         <img class="img-responsive img-rounded" src="images/androidProject/prefBal.png">
     </div>
 
-    <div class="col-sm-4">
+    <div class="col-sm-1 col-md-4">
         <p>And now its all the markets! The list is scrollable.</p>
         <img class="img-responsive img-rounded" src="images/androidProject/allBal.png">
     </div>
 
-    <div class="col-sm-4">
+    <div class="col-sm-1 col-md-4">
         <p>This shows ones order history; Also scrollable.</p>
         <img class="img-responsive img-rounded" src="images/androidProject/allHist.png">
     </div>
 
-    <div class="col-sm-4">
+    <div class="col-sm-1 col-md-4">
         <p>This page displays your active orders</p>
         <img class="img-responsive img-rounded" src="images/androidProject/ordAct.png">
     </div>
 
-    <div class="col-sm-4">
+    <div class="col-sm-1 col-md-4">
         <p>View the recent market orders.</p>
         <img class="img-responsive img-rounded" src="images/androidProject/ordMark.png">
     </div>
 
-    <div class="col-sm-4">
+    <div class="col-sm-1 col-md-4">
         <p>Set up an order!</p>
         <img class="img-responsive img-rounded" src="images/androidProject/tradeMark.png">
     </div>
 
-    <div class="col-sm-4">
+    <div class="col-sm-1 col-md-4">
         <p>Make the trade!</p>
         <img class="img-responsive img-rounded" src="images/androidProject/makeMark.png">
     </div>
 
-    <div class="col-sm-4">
+    <div class="col-sm-1 col-md-4">
         <p>Set your key and secrete or change your preferred markets and coins.</p>
         <img class="img-responsive img-rounded" src="images/androidProject/settings.png">
     </div>
 
-    <div class="col-sm-4">
+    <div class="col-sm-1 col-md-4">
         <p>Set your key! These are save in your shared preferences.</p>
         <img class="img-responsive img-rounded" src="images/androidProject/setKey.png">
     </div>
 
-    <div class="col-sm-4">
+    <div class="col-sm-1 col-md-4">
         <p>Whats a key without a secrete!</p>
         <img class="img-responsive img-rounded" src="images/androidProject/setSecrete.png">
     </div>
 
-    <div class="col-sm-4">
+    <div class="col-sm-1 col-md-4">
         <p>What are the coins you commonly deal with.</p>
         <img class="img-responsive img-rounded" src="images/androidProject/prefCoin.png">
     </div>
 
-    <div class="col-sm-4">
+    <div class="col-sm-1 col-md-4">
         <p>Get your trading markets ready for easy access.</p>
         <img class="img-responsive img-rounded" src="images/androidProject/prefMark.png">
     </div>
 
-    <div class="col-sm-4">
+    <div class="col-sm-1 col-md-4">
         <p>Logo, made in paint. MAD skills</p>
         <img class="img-responsive img-rounded" src="images/androidProject/cryptsyTrader.png">
     </div>
