--- a/templates/resume.html
+++ b/templates/resume.html
@@ -8,7 +8,7 @@
 <div>
     <p>Taber Storm Fitzgerald</p>
 
-    <p>I am currently working at build.com as a Software Developer Intern</p>
+    <p>I am currently working at <a href="http://www.build.com">build.com</a> as a Software Developer Intern</p>
 
     <p>In this position I:</p>
     <ul>
