updates some content

--- a/css/style.css
+++ b/css/style.css
@@ -22,26 +22,31 @@ header h2{
 .nav-pills > li.active {
     background-color: whitesmoke;
     color: red;
+    border-radius: 5px;
 }
 
 .nav-pills > li.active > a {
     background-color: whitesmoke;
     color: red;
+    border-radius: 5px;
 }
 
 .nav-pills > li.active > a:focus {
     background-color: whitesmoke;
     color: red;
+    border-radius: 5px;
 }
 
 .nav-pills > li > a:hover {
     background-color: red;
     color: whitesmoke;
+    border-radius: 5px;
 }
 
 .nav-pills > li.active > a:hover {
     background-color: red;
     color: whitesmoke;
+    border-radius: 5px;
 }
 
 .dropdown a {
